--- a/arch/arm64/configs/wahoo_defconfig
+++ b/arch/arm64/configs/wahoo_defconfig
@@ -743,7 +743,7 @@ CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_TIMEOUT=1
 CONFIG_SCHED_STACK_END_CHECK=y
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
-CONFIG_CC_WERROR=y
+CONFIG_CC_WERROR=n
 CONFIG_DEBUG_ALIGN_RODATA=y
 CONFIG_PFK=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
@@ -780,3 +780,4 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_XZ_DEC=y
 CONFIG_QMI_ENCDEC=y
+CONFIG_ASSISTED_SUPERUSER=y
